finished cebu city also created new template copy

--- a/ph/region/R1-Laoag copy.html
+++ b/ph/region/R1-Laoag copy.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>All About Laoag City - AAP</title>
-    <meta name="description" content=" Laoag City is the capital of the province of Ilocos Norte, located in the Ilocos Region of the Philippines. It is situated on the northern coast of Luzon Island, facing the South China Sea.">
-    <meta name="keywords" content="Laoag City, laoag city, Laoag, laoag, La Paz Sand Dunes, Museo Ilocos Norte, St. William's Cathedral, Sinking Bell Tower">
-    <meta name="author" content="Mj Fernandez">
+    <title>All About Cebu City - AAP</title>
+    <meta name="description" content="Cebu City is a vibrant metropolis in the Philippines known for its rich history, diverse culture, and stunning attractions. Explore travel tips, local cuisine, arts, festivals, and more.">
+    <meta name="keywords" content="Cebu City, Queen City of the South, Cebu attractions, Filipino cuisine, Sinulog Festival, Magellan's Cross, Cebu lechon, Cebu historical sites, Cebu festivals, whale shark watching Cebu, Cebu indigenous cultures">
+    <meta name="author" content="Christian Eduarte">
     <!-- Open Graph meta tags for social media sharing -->
-    <meta property="og:title" content="All About Laoag City - AAP">
-    <meta property="og:description" content="Laoag City is the capital of the province of Ilocos Norte, located in the Ilocos Region of the Philippines. It is situated on the northern coast of Luzon Island, facing the South China Sea.">
+    <meta property="og:title" content="All About Cebu City - AAP">
+    <meta property="og:description" content="Cebu City is a vibrant metropolis in the Philippines known for its rich history, diverse culture, and stunning attractions. Explore travel tips, local cuisine, arts, festivals, and more.">
     <meta property="og:image" content="URL of the image to be displayed when sharing on social media">
     <meta property="og:url" content="URL of the page">
 
     <!-- Twitter Card meta tags for sharing on Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="All About Laoag City - AAP">
-    <meta name="twitter:description" content="Laoag City is the capital of the province of Ilocos Norte, located in the Ilocos Region of the Philippines. It is situated on the northern coast of Luzon Island, facing the South China Sea.">
+    <meta name="twitter:title" content="All About Cebu City - AAP">
+    <meta name="twitter:description" content="Cebu City is a vibrant metropolis in the Philippines known for its rich history, diverse culture, and stunning attractions. Explore travel tips, local cuisine, arts, festivals, and more.">
     <meta name="twitter:image" content="URL of the image to be displayed when sharing on Twitter">
 
     <!-- Canonical URL to avoid duplicate content issues -->
