--- a/ph/region/R7-Cebu-City.html
+++ b/ph/region/R7-Cebu-City.html
@@ -62,7 +62,7 @@
                             <li><strong>Location:</strong> Ilocos Norte is a province located in the Ilocos Region of the Philippines, situated in the northwestern part of Luzon island.</li>
                             <li><strong>Overview:&nbsp;</strong> Known for its rich history and scenic landscapes, Ilocos Norte offers a blend of cultural heritage, natural wonders, and warm hospitality. It is home to beautiful beaches, historical sites, and vibrant festivals.</li>
                             <li><strong>Population:</strong> Ilocos Norte has a population of over 593,000 residents, comprising both rural and urban communities.</li>
-                        </ul><span class="badge bg-success mb-2"><a href="../itinerary/R1-IlocosNorte.html"><span style="color: rgb(0, 0, 0);">Check our Ilocos Norte Itinerary&nbsp;</span></a><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-list-columns-reverse text-dark">
+                        </ul><span class="badge bg-success mb-2"><a href="../itinerary/R1 - IlocosNorte.html"><span style="color: rgb(0, 0, 0);">Check our Ilocos Norte Itinerary&nbsp;</span></a><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-list-columns-reverse text-dark">
                                 <path fill-rule="evenodd" d="M0 .5A.5.5 0 0 1 .5 0h2a.5.5 0 0 1 0 1h-2A.5.5 0 0 1 0 .5Zm4 0a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1h-10A.5.5 0 0 1 4 .5Zm-4 2A.5.5 0 0 1 .5 2h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Zm4 0a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5Zm-4 2A.5.5 0 0 1 .5 4h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Zm4 0a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5Zm-4 2A.5.5 0 0 1 .5 6h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Zm4 0a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 0 1h-8a.5.5 0 0 1-.5-.5Zm-4 2A.5.5 0 0 1 .5 8h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Zm4 0a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 0 1h-8a.5.5 0 0 1-.5-.5Zm-4 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Zm4 0a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1h-10a.5.5 0 0 1-.5-.5Zm-4 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Zm4 0a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5Zm-4 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Zm4 0a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5Z"></path>
                             </svg></span>
                             <span class="badge bg-warning mb-2"><a href="Regions.html"><span style="color: rgb(0, 0, 0);">Learn about another region</span></a>
@@ -111,13 +111,110 @@
                         <h3 class="fw-bold">CITY INSIDE ILOCOS NORTE</h3>
                         <ul>
                             <li><strong>Laoag City:&nbsp;</strong> Laoag City is the capital of the province of Ilocos Norte, located in the Ilocos Region of the Philippines. It is situated on the northern coast of Luzon Island, facing the South China Sea.</li>
-                            
-                        </ul><span class="badge bg-light mb-2"><a href="R1-Laoag.html"><span style="color: rgb(0, 0, 0);">Click this to know more about Laoag City !</span></a></span><span class="badge bg-light mb-2"><a href="https://adsphilanthropy.allaboutphilippines.info"><span style="color: rgb(0, 0, 0);">Check more business here in Philippines&nbsp;</span></a></span>
-                        
+                            <!-- <li>Heritage Towns: Visitors can explore the well-preserved heritage towns of Vigan and Paoay, known for their Spanish colonial architecture and cobblestone streets.</li>
+                            <li><strong>Shopping and Entertainment:</strong> The city is a hub for shopping malls, including, SM City North EDSA, Trinoma, and Ayala Vertis North. These malls provide retail therapy, dining options, and entertainment facilities such as cinemas and indoor amusement centers.</li> -->
+                        </ul><span class="badge bg-light mb-2"><a href="R1-Laoag.html"><span style="color: rgb(0, 0, 0);">Click this to know more about Laoag City !</span></a></span>
                     </div>
-                    <ul>
-                    </div></div>
-                    </ul>
+                <!-- </div>
+                <div class="col mb-5">
+                    <div>
+                        <h3 class="fw-bold">Filipino Cuisine</h3>
+                        <ul>
+                            <li> Ilocos Norte offers a unique culinary experience with its traditional delicacies. Must-try dishes include bagnet (crispy pork belly), empanada (deep-fried stuffed pastry), and pinakbet (mixed vegetable stew). The province is also known for its famous Ilocos longganisa (sausage) and bagoong (fermented shrimp paste).</li>
+                        </ul>
+                    </div><span class="badge bg-light mb-2"><a href="../../business/Business-Links.html"><span style="color: rgb(0, 0, 0);">Check more business here in Philippines&nbsp;</span></a></span>
+                </div>
+            </div>
+            <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
+                <div class="col d-md-flex align-self-start align-items-md-end align-items-lg-center mb-5">
+                    <div>
+                        <h3 class="fw-bold">Arts and Crafts</h3>
+                        <ul>
+                            <li>Artisanal Crafts: Ilocos Norte is renowned for its handicrafts, including pottery, weaving, and woodcarving. Visitors can explore local markets and shops to discover intricately crafted products such as Abel Iloco (handwoven textile) and burnay jars (clay pots). Malacanang Ti Amianan: This museum in Laoag City showcases various artworks and historical artifacts, providing insights into the region's art and cultural heritage.</li>
+                            <!-- <br> -->
+                            <!-- <li></li> -->
+                         <!-- </ul>
+                    </div>
+                </div>
+                <div class="col mb-5">
+                    <div>
+                        <h3 class="fw-bold">Festivals and Celebrations</h3>
+                        <ul>
+                            <li>Kabinnulig Festival: Held in January, this festival celebrates the unity and cultural diversity of Ilocos Norte. It features street parades, traditional dances, music performances, and showcases the province's vibrant traditions and customs. Pamulinawen Festival: Celebrated in February, this festival pays homage to the province's patroness, Nuestra Señora de la Paz y Buen Viaje. It includes street dancing, beauty pageants, and a grand procession.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
+                <div class="col d-md-flex align-self-start align-items-md-end align-items-lg-center mb-5">
+                    <div>
+                        <h3 class="fw-bold">Nature and Wildlife</h3>
+                        <ul>
+                            <li>Pristine Beaches: Ilocos Norte boasts beautiful beaches such as Pagudpud Beach and Blue Lagoon, offering crystal-clear waters and white sand shores. Visitors can engage in water activities such as swimming, snorkeling, and beachcombing. Cape Bojeador Lighthouse: Situated on a hill in Burgos, this iconic lighthouse provides panoramic views of the coastline and serves as a historical landmark.</li>
+                            <br>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col mb-5">
+                    <div>
+                        <h3 class="fw-bold">Historical Sites</h3>
+                        <ul>
+                            <li>Paoay Church: Also known as the Saint Augustine Church, Paoay Church is a UNESCO World Heritage Site known for its Baroque architecture and earthquake-resistant design. It is one of the oldest churches in the Philippines. Juan Luna Shrine: Located in Badoc, this shrine pays tribute to the renowned Filipino painter Juan Luna and showcases his artworks and personal belongings.</li>
+                            <br>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
+                <div class="col d-md-flex align-self-start align-items-md-end align-items-lg-center mb-5">
+                    <div>
+                        <h3 class="fw-bold">Music and Dance</h3>
+                        <ul>
+                            <li>Traditional Music: Ilocos Norte preserves traditional music through local musicians and cultural performances. Visitors can enjoy traditional folk songs and music played during festivals and events. Dance Troupes: Ilocos Norte features dance troupes that perform traditional Filipino dances, including the Tinikling, Sakuting, and Banga dances, showcasing the province's vibrant cultural heritage.</li>
+                            <br>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col mb-5">
+                    <div>
+                        <h3 class="fw-bold">Sports and Recreation</h3>
+                        <ul>
+                            <li>Kiteboarding and Windsurfing: The province's strong winds and favorable coastal conditions make it a popular destination for kiteboarding and windsurfing enthusiasts. Sandboarding: Visitors can experience the thrill of sandboarding on the sand dunes of Paoay and Laoag, providing a unique recreational activity amidst the picturesque landscapes.</li>
+                            <br>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
+                <div class="col d-md-flex align-self-start align-items-md-end align-items-lg-center mb-5">
+                    <div>
+                        <h3 class="fw-bold">Religion and Beliefs</h3>
+                        <ul>
+                            <li>Churches and Shrines: Ilocos Norte is home to numerous churches and shrines, reflecting the strong religious devotion of the locals. Notable sites include the Laoag Cathedral, Bacarra Church, and Paoay Church. Processions and Religious Events: The province celebrates religious processions and events, such as the Feast of Nuestra Señora de la Paz y Buen Viaje, where devotees gather to express their faith and participate in religious rituals.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col d-md-flex align-self-start align-items-md-end align-items-lg-center mb-5">
+                    <div>
+                        <h3 class="fw-bold">Literature</h3>
+                        <ul>
+                            <li>Local Writers and Literary Events: Ilocos Norte nurtures local writers and hosts literary events that celebrate the province's literary heritage. Various literary workshops, book fairs, and poetry readings are organized to promote literature and creative writing.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col d-md-flex align-self-start align-items-md-end align-items-lg-center mb-5">
+                    <div>
+                        <h3 class="fw-bold">Indigenous Cultures</h3>
+                        <ul>
+                            <li>Indigenous Communities: Ilocos Norte recognizes and respects the indigenous communities within its territory, such as the Ilocano people. These communities preserve their cultural practices, including weaving, music, dances, and traditional rituals, providing a glimpse into their rich indigenous heritage.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div> -->
         </div>
         <section class="py-5"></section>
     </section>
@@ -138,7 +235,7 @@
                     <h3 class="fs-6 fw-bold">Resources</h3>
                     <ul class="list-unstyled">
                         <li><a href="../../tech-used.html">Technology Used</a></li>
-                        <li><a href="../../how-to-advertise.html">How to advertise</a></li>
+                        <li><a href="../../how-to-advertise">How to advertise</a></li>
                         <li><a href="../../ComingSoon.html">Terms and Conditions</a></li>
                         <li><a href="https://www.buymeacoffee.com/allaboutphil">Support the devs</a></li>
                         <li><a href="../../ComingSoon.html">FAQ</a></li>
@@ -156,13 +253,17 @@
                     <li class="list-inline-item"><a href="https://web.facebook.com/allaboutphiliipines"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
                             <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path>
                         </svg></a></li>
-                    <!-- <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-twitter">
+                <!-- <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
+                            <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path>
+                        </svg></li>
+                    <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-twitter">
                             <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"></path>
                         </svg></li>
                     <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-instagram">
                             <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"></path>
-                        </svg></li> -->
-                </ul> 
+                        </svg></li>
+                </ul> -->
             </div>
         </div>
     </footer>
