finished bohol and anchor changes to tagbilaran

--- a/ph/region/R7-Tagbilaran-City.html
+++ b/ph/region/R7-Tagbilaran-City.html
@@ -117,7 +117,7 @@
                     <div>
                         <h3 class="fw-bold">Travel and Tourism</h3>
                         <ul>
-                            <li><strong>Attractions:&nbsp;</strong>Tagbilaran City provides a starting point for exploring Bohol's wonders, including the famous Chocolate Hills, tarsier sanctuaries, and pristine beaches in Panglao Island.</li>
+                            <li><strong>Attractions:&nbsp;</strong>Tagbilaran City provides a starting point for exploring Bohol's wonders, including the famous <a href="https://www.google.com/search?client=firefox-b-e&q=Chocolate+Hills" target="_blank">Chocolate Hills</a>, <a href="https://www.google.com/search?client=firefox-b-e&q=tarsier+sanctuaries" target="_blank">tarsier sanctuaries</a>, and <a href="https://www.google.com/search?client=firefox-b-e&q=pristine+beaches+in+Panglao+Island" target="_blank">pristine beaches in Panglao Island</a>.</li>
                             <li><strong>Blood Compact Shrine:&nbsp;</strong>Commemorating the first international treaty of friendship between the Spanish explorer Miguel Lopez de Legazpi and the local chieftain Sikatuna, this historical site offers insights into Bohol's past.</li>
                         </ul><span class="badge bg-light mb-2"><a href="../itinerary/R7-Tagbilaran-City.html"><span style="color: rgb(0, 0, 0);">Click this for Tagbilaran City Itinerary !</span></a></span>
                     </div>
